@@ -133,6 +133,10 @@ def parse_config(myconfig):
 		print "Snapshot cache support enabled."
 		conf_values["SNAPCACHE"]="1"
 
+	if "metadata_overlay" in conf_values["options"].split():
+		print "Use of metadata_overlay module for portage enabled."
+		conf_values["METADATA_OVERLAY"]="1"
+
 #	if "tarball" in string.split(conf_values["options"]):
 #		print "Tarball creation enabled."
 #		conf_values["TARBALL"]="1"
