@@ -38,6 +38,8 @@ hash_function="crc32"
 #	build stops in livecd-stage2)
 # pkgcache = keeps a tbz2 of every built package (useful if your build stops
 #	prematurely)
+# metadata_overlay = enabled the metadata_overlay cache module in portage, which
+#	uses the in-tree metadata
 # seedcache = use the build output of a previous target if it exists to speed up
 #	the copy
 # snapcache = cache the snapshot so that it can be bind-mounted into the chroot.
@@ -45,7 +47,7 @@ hash_function="crc32"
 #	your cache. The cache is unlinked before any empty or rm processing, though.
 #
 # (These options can be used together)
-options="autoresume kerncache pkgcache seedcache snapcache"
+options="autoresume kerncache pkgcache seedcache snapcache metadata_overlay"
 
 # portdir specifies the source portage tree used by the snapshot target.
 portdir="/usr/portage"
