@@ -1,6 +1,10 @@
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  25 Nov 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst,
+  files/catalyst.conf, modules/generic_stage_target.py:
+  add option for metadata_overlay use with portage
+
   25 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
   modules/stage1_target.py, modules/stage2_target.py,
   modules/stage3_target.py:
